--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,11 @@
   width: 100vw;
 }
 
+body{
+  background-color: rgb(228, 250, 249);
+
+}
+
 .signin-canvas {
   background-color: rgba(188, 203, 207, 0.692);
   backdrop-filter: blur(4px);
@@ -100,7 +105,7 @@
   }
 
   .landing img {
-    height: 40vh;
+    /* height: 15wh; */
     /* height: 25%; */
     margin-top: 80px;
     margin-BOTTOM: 80px;
@@ -124,7 +129,7 @@
   }
 
   .landing img {
-    height: 91vh;
+    height: 35vw;
     width: 100%;
     /* opacity: 0.7; */
   }
