--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,7 +105,7 @@ body{
   }
 
   .landing img {
-    /* height: 15wh; */
+    height: 50vw;
     /* height: 25%; */
     margin-top: 80px;
     margin-BOTTOM: 80px;
