--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,17 +129,17 @@ body{
   }
 
   .landing img {
-    height: 35vw;
+    height: 45vw;
     width: 100%;
     /* opacity: 0.7; */
   }
 }
 
-.landing .menu button {
-  background-color: #57b3dd;
+.landing .menu button, .menu button {
+  background-color: #9bd6f1;
   border-radius: 30px;
-  box-shadow: rgba(101, 141, 116, 0.2) 0 -25px 18px -14px inset, rgba(78, 203, 212, 0.15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(94, 208, 228, 0.15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(76, 198, 219, 0.15) 0 16px 32px;
-  color: rgb(7, 34, 49);
+  box-shadow: rgba(101, 141, 116, 0.2) 0 -25px 18px -14px inset, rgba(78, 203, 212, 0.15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(94, 208, 228, 0.15) 0 4px 8px;
+  color: rgb(6, 53, 78);
   cursor: pointer;
   /* font-size: x-large; */
   font-weight: 600;
